--- a/app/views/photos/edit.html.erb
+++ b/app/views/photos/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @photo %> |
-<%= link_to 'Back', photos_path %>
+<%= link_to 'Show', [@user, @photo] %> |
+<%= link_to 'Back', user_photos_path(@user) %>
