--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -18,13 +18,13 @@
     <% @photos.each do |photo| %>
       <tr>
         <td><%= photo.user %></td>
-        <td><%= photo.title %></td>
+        <td><%= photo.name %></td>
         <td><%= photo.description %></td>
         <td><%= photo.filename %></td>
         <td><%= photo.taken_at %></td>
-        <td><%= link_to 'Show', photo %></td>
-        <td><%= link_to 'Edit', edit_photo_path(photo) %></td>
-        <td><%= link_to 'Destroy', photo, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', user_photo_path(@user, photo) %></td>
+        <td><%= link_to 'Edit', edit_user_photo_path(@user, photo) %></td>
+        <td><%= link_to 'Destroy', [@user, photo], method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -32,4 +32,4 @@
 
 <br>
 
-<%= link_to 'New Photo', new_photo_path %>
+<%= link_to 'New Photo', new_user_photo_path(@user) %>
