--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,7 +11,11 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="field">	  
+    <%= f.label :username %><br>
+    <%= f.text_field :username %>
+  </div>
+  <div class="field">	  
     <%= f.label :user_type %><br>
     <%= f.text_field :user_type %>
   </div>
